# mine

./: .gitignore  BioCUDA_v39.ipynb  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
biocuda/: __init__.py  autotune.py  cli.py  detect.py  formulas.py  planner.py  runtime.py  specs.py  tier_m.py  vendor_perf.py  workloads.py
biocuda/kernels/: __init__.py  _common.py  dispatch.py  sm70_v100.py  sm75_t4.py  sm80_a100.py  sm86_a10.py  sm86_rtx3090.py  sm89_l4.py  sm89_l40.py  sm89_rtx4090.py  sm90_h100_pcie.py  sm90_h100_sxm5.py
examples/: plan_sw.py
tests/: test_detection.py  test_formulas.py  test_planner.py
